--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/user-settings/user-settings.component.css
@@ -927,7 +927,7 @@
   .modal {
 	height: 100%;
 	max-width: 100%;
-	background-color: var(--ov-secondary-light-color);
+	background-color: var(--ov-light-color);
 
   }
   .modal.fade .modal-dialog {
