--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.css
@@ -32,6 +32,10 @@ hr {
 	width: 320px;
 }
 
+#prejoin-container ::ng-deep .layout {
+	min-width: 0px !important;
+}
+
 #background-effects-btn {
 	position: absolute;
     z-index: 1;
