--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/background-effects-panel/background-effects-panel.component.css
@@ -34,14 +34,30 @@
 	margin: 5px;
 	border-radius: var(--ov-panel-radius);
 	background-color: var(--ov-light-color);
-	width: 50px;
-	height: 50px;
+	width: 60px;
+	height: 60px;
+}
+
+.effect-button:hover {
+	cursor: pointer;
 }
 
 .active-effect-btn {
-	border: 2px solid;
+	border: 2px solid var(--ov-tertiary-color);
 }
 
 #hard-blur-btn .mat-icon {
 	font-weight: bold !important;
+}
+
+.grid {
+	display: grid;
+    grid-template-columns: repeat(auto-fit, 70px);
+}
+
+.grid img {
+	max-width: 100%;
+	max-height: 100%;
+	border-radius: var(--ov-panel-radius);
+
 }
