openvidu-components: Updated test app

--- a/openvidu-components-angular/src/app/examples/examples-dashboard/examples-dashboard.component.html
+++ b/openvidu-components-angular/src/app/examples/examples-dashboard/examples-dashboard.component.html
@@ -7,6 +7,9 @@
 		<div class="card card-small" (click)="goTo('toolbarAdditionalButtonsDirective')" tabindex="0">
 			<span>ToolbarAdditionalButtonsDirective</span>
 		</div>
+		<div class="card card-small" (click)="goTo('toolbarAdditionalPanelButtonsDirective')" tabindex="0">
+			<span>ToolbarAdditionalPanelButtonsDirective</span>
+		</div>
 	</div>
 
 	<div class="card-container">
@@ -25,6 +28,10 @@
 
 		<div class="card card-small" (click)="goTo('panelDirective')" tabindex="0">
 			<span>PanelDirective</span>
+		</div>
+
+		<div class="card card-small" (click)="goTo('additionalPanelsDirective')" tabindex="0">
+			<span>AdditionalPanelsDirective</span>
 		</div>
 
 		<div class="card card-small" (click)="goTo('participantsPanelDirective')" tabindex="0">
