openvidu-components: Fixed background directive

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -65,7 +65,7 @@
 		<button
 			mat-icon-button
 			id="more-options-btn"
-			*ngIf="!isMinimal && !isOpenViduCE && showBackgroundEffectsButton"
+			*ngIf="!isMinimal && showBackgroundEffectsButton"
 			[matMenuTriggerFor]="menu"
 			[disabled]="isConnectionLost"
 		>
