openvidu-components-angular: multiple VB bug fixes

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -72,7 +72,7 @@
 						<button
 							mat-icon-button
 							id="camera-button"
-							[disabled]="!hasVideoDevices"
+							[disabled]="!hasVideoDevices || videoMuteChanging"
 							[class.warn-btn]="isVideoMuted"
 							(click)="toggleCam()"
 						>
