openvidu-components-angular: manage some incompatible VB situations

--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/pre-join/pre-join.component.html
@@ -13,7 +13,7 @@
 				<ov-layout>
 					<ng-template #stream let-stream>
 						<button
-							*ngIf="!isMinimal && showBackgroundEffectsButton"
+							*ngIf="!isMinimal && !isVideoMuted && showBackgroundEffectsButton"
 							mat-icon-button
 							id="background-effects-btn"
 							(click)="toggleBackgroundEffects()"
