--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/toolbar/toolbar.component.html
@@ -93,7 +93,13 @@
 			</button> -->
 
 			<!-- Virtual background button -->
-			<button *ngIf="!isMinimal && showBackgroundEffectsButton" mat-menu-item id="virtual-bg-btn" (click)="toggleBackgroundEffects()">
+			<button
+				*ngIf="!isMinimal && showBackgroundEffectsButton"
+				[disabled]="!isWebcamVideoActive"
+				mat-menu-item
+				id="virtual-bg-btn"
+				(click)="toggleBackgroundEffects()"
+			>
 				<mat-icon>auto_awesome</mat-icon>
 				<span>Background effects</span>
 			</button>
