--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/chat-panel/chat-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/chat-panel/chat-panel.component.html
@@ -1,7 +1,7 @@
-<div id="chat-container" fxLayout="column" fxLayoutAlign="space-evenly none" >
-	<div class="header-container" fxFlex="55px" fxLayoutAlign="start center">
-		<h3>Chat</h3>
-		<button mat-icon-button matTooltip="Close" (click)="close()">
+<div class="panel-container" id="chat-container" fxLayout="column" fxLayoutAlign="space-evenly none" >
+	<div class="panel-header-container" fxFlex="55px" fxLayoutAlign="start center">
+		<h3 class="panel-title">Chat</h3>
+		<button class="panel-close-button" mat-icon-button matTooltip="Close" (click)="close()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</div>
