--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.html
@@ -1,7 +1,7 @@
-<div class="participants-container" id="participants-container">
-	<div class="header-container">
-		<h3>Participants</h3>
-		<button mat-icon-button matTooltip="Close" (click)="close()">
+<div class="panel-container" id="participants-container">
+	<div class="panel-header-container">
+		<h3 class="panel-title">Participants</h3>
+		<button class="panel-close-button" mat-icon-button matTooltip="Close" (click)="close()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</div>
