--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/activities-panel.component.html
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/activities-panel/activities-panel.component.html
@@ -1,7 +1,7 @@
-<div class="panel" id="activities-container" fxLayout="column" fxLayoutAlign="space-evenly none">
-	<div class="header-container" fxFlex="55px" fxLayoutAlign="start center">
-		<h3>Activities</h3>
-		<button mat-icon-button matTooltip="Close" (click)="close()">
+<div class="panel-container" id="activities-container" fxLayout="column" fxLayoutAlign="space-evenly none">
+	<div class="panel-header-container" fxFlex="55px" fxLayoutAlign="start center">
+		<h3 class="panel-title">Activities</h3>
+		<button class="panel-close-button" mat-icon-button matTooltip="Close" (click)="close()">
 			<mat-icon>close</mat-icon>
 		</button>
 	</div>
