--- a/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.css
+++ b/openvidu-components-angular/projects/openvidu-angular/src/lib/components/panel/participants-panel/participants-panel/participants-panel.component.css
@@ -1,29 +1,6 @@
-.participants-container {
-	margin: 20px;
-	background-color: var(--ov-panel-background);
-	border-radius: var(--ov-panel-radius);
-	max-height: calc(100% - 40px);
-	min-height: calc(100% - 40px);
-}
-
-.header-container {
-	padding: 10px;
-	display: flex;
-}
-
-.header-container h3 {
-	margin-left: 5px;
-	margin-top: auto;
-	margin-bottom: auto;
-}
-
-.header-container button {
-	margin-left: auto;
-	border-radius: var(--ov-buttons-radius);
-}
-
-.local-participant-container, .remote-participants-container {
-    margin: 5px 10px;
+.local-participant-container,
+.remote-participants-container {
+	margin: 5px 10px;
 }
 
 .scrollable {
@@ -32,7 +9,7 @@
 	overflow: auto;
 }
 
-.message-container{
+.message-container {
 	padding: 5px;
 	background-color: var(--ov-light-color);
 	color: var(--ov-panel-text-color);
@@ -41,7 +18,6 @@
 	font-size: 12px;
 }
 
-.message-container p{
+.message-container p {
 	margin: 0;
-
 }
